fix: initial commit of optional registration